kube-data/wordpress-mysql/mysql-deploy-svc.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage  
          mountPath: "/var/lib/mysql"
      volumes:
      - name: mysql-persistent-storage    
        persistentVolumeClaim:
          claimName: mysql-persistent-storage

---

apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql   
  namespace: wordpress
  labels:                 
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
